// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          201,
          356,
        ],
        [
          198,
          365,
        ],
        [
          195,
          356,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            198,
            301,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          198,
          243,
        ],
        [
          198,
          279,
        ],
        [
          198,
          320,
        ],
        [
          198,
          356,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 587,
  "id": "amazon",
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        11,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 373,
      },
      "title": "cloud",
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "AMAZON",
          "width": 53,
        },
      ],
      "parent": null,
      "position": [
        11,
        318,
      ],
      "shape": "rectangle",
      "size": {
        "height": 258,
        "width": 373,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            95,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        38,
        63,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            146,
            82,
          ],
          "text": "S3",
          "width": 22,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            90,
            112,
          ],
          "text": "S3 is a storage service",
          "width": 135,
        },
      ],
      "parent": "amazon",
      "position": [
        38,
        370,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "S3",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "source": {
            "element": "cloud",
            "isDescedants": true,
          },
          "target": {
            "element": "amazon",
            "isDescedants": false,
          },
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "amazon",
  "width": 395,
}
`;

exports[`dotLayout: computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          421,
          637,
        ],
        [
          411,
          639,
        ],
        [
          418,
          631,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            579,
            566,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          633,
          501,
        ],
        [
          605,
          529,
        ],
        [
          571,
          557,
        ],
        [
          536,
          578,
        ],
        [
          524,
          586,
        ],
        [
          519,
          583,
        ],
        [
          506,
          589,
        ],
        [
          477,
          602,
        ],
        [
          448,
          618,
        ],
        [
          420,
          634,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          267,
          627,
        ],
        [
          264,
          636,
        ],
        [
          260,
          627,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            260,
            559,
          ],
          "text": "fetches data in zero trust network with sso",
          "width": 249,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            260,
            575,
          ],
          "text": "authentification",
          "width": 90,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          257,
          501,
        ],
        [
          259,
          540,
        ],
        [
          261,
          587,
        ],
        [
          263,
          627,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          737,
          949,
        ],
        [
          734,
          958,
        ],
        [
          731,
          949,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            734,
            911,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          734,
          821,
        ],
        [
          734,
          861,
        ],
        [
          734,
          908,
        ],
        [
          734,
          949,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          256,
          307,
        ],
        [
          252,
          316,
        ],
        [
          249,
          307,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            252,
            239,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          252,
          181,
        ],
        [
          252,
          220,
        ],
        [
          252,
          267,
        ],
        [
          252,
          307,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          717,
          307,
        ],
        [
          714,
          316,
        ],
        [
          711,
          307,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            714,
            239,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          714,
          181,
        ],
        [
          714,
          220,
        ],
        [
          714,
          267,
        ],
        [
          714,
          307,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          537,
          727,
        ],
        [
          546,
          730,
        ],
        [
          537,
          734,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labels": [],
      "parent": "cloud.backend",
      "points": [
        [
          460,
          730,
        ],
        [
          486,
          730,
        ],
        [
          511,
          730,
        ],
        [
          537,
          730,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
  ],
  "height": 1142,
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [
        "cloud.frontend.dashboard",
        "cloud.frontend.adminPanel",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            14,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        256,
      ],
      "shape": "rectangle",
      "size": {
        "height": 631,
        "width": 972,
      },
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "BACKEND",
          "width": 60,
        },
      ],
      "parent": "cloud",
      "position": [
        51,
        589,
      ],
      "shape": "rectangle",
      "size": {
        "height": 258,
        "width": 892,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            116,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            40,
            104,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            154,
            120,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        66,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 371,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            121,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        554,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            77,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        574,
        962,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            66,
            74,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 235,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            103,
          ],
          "text": "The customer dashboard is a webapp that allows",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            99,
            119,
          ],
          "text": "customers to view their data.",
          "width": 170,
        },
      ],
      "parent": "cloud",
      "position": [
        528,
        321,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 372,
      },
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            100,
            74,
          ],
          "text": "Admin Panel Webapp",
          "width": 168,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            40,
            103,
          ],
          "text": "The admin panel is a webapp that allows support",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            92,
            119,
          ],
          "text": "staff to manage customer data.",
          "width": 184,
        },
      ],
      "parent": "cloud",
      "position": [
        66,
        321,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 371,
      },
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            142,
            82,
          ],
          "text": "Graphql API",
          "width": 95,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            112,
          ],
          "text": "Component that allows to query data via GraphQL.",
          "width": 301,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        77,
        640,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 382,
      },
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            115,
            74,
          ],
          "text": "Backend Storage",
          "width": 133,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            104,
          ],
          "text": "The backend storage is a component that stores",
          "width": 286,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            167,
            120,
          ],
          "text": "data.",
          "width": 30,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        550,
        640,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 367,
      },
      "title": "Backend Storage",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 994,
}
`;

exports[`dotLayout: computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          893,
          394,
        ],
        [
          902,
          397,
        ],
        [
          893,
          401,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "fetches data in zero trust network with sso authentification",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            609,
            374,
          ],
          "text": "fetches data in zero trust network with sso",
          "width": 249,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            609,
            390,
          ],
          "text": "authentification",
          "width": 90,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          563,
          397,
        ],
        [
          663,
          397,
        ],
        [
          791,
          397,
        ],
        [
          893,
          397,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          1070,
          583,
        ],
        [
          1067,
          593,
        ],
        [
          1064,
          583,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            1067,
            546,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          1067,
          488,
        ],
        [
          1067,
          518,
        ],
        [
          1067,
          552,
        ],
        [
          1067,
          584,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          335,
          295,
        ],
        [
          338,
          304,
        ],
        [
          330,
          298,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            295,
            239,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          249,
          181,
        ],
        [
          275,
          217,
        ],
        [
          305,
          259,
        ],
        [
          332,
          296,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          477,
          299,
        ],
        [
          468,
          304,
        ],
        [
          471,
          295,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            519,
            239,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          558,
          181,
        ],
        [
          531,
          217,
        ],
        [
          501,
          259,
        ],
        [
          475,
          296,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
  ],
  "height": 777,
  "id": "cloudView",
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            14,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        216,
        256,
      ],
      "shape": "rectangle",
      "size": {
        "height": 258,
        "width": 1038,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            115,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            104,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            153,
            120,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 371,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            121,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        462,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            77,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        907,
        597,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            95,
          ],
          "text": "Frontend",
          "width": 70,
        },
      ],
      "parent": "cloud",
      "position": [
        243,
        307,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            95,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        907,
        307,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 1264,
}
`;

exports[`dotLayout: computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          331,
          278,
        ],
        [
          334,
          287,
        ],
        [
          326,
          282,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            302,
            239,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          253,
          181,
        ],
        [
          277,
          212,
        ],
        [
          303,
          248,
        ],
        [
          328,
          280,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          481,
          282,
        ],
        [
          472,
          287,
        ],
        [
          475,
          278,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            518,
            239,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          554,
          181,
        ],
        [
          530,
          212,
        ],
        [
          503,
          248,
        ],
        [
          479,
          280,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          406,
          566,
        ],
        [
          403,
          576,
        ],
        [
          400,
          566,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            403,
            529,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          403,
          471,
        ],
        [
          403,
          501,
        ],
        [
          403,
          535,
        ],
        [
          403,
          566,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
  ],
  "height": 760,
  "id": "index",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            115,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            104,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            153,
            120,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 371,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            121,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        462,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            136,
            95,
          ],
          "text": "cloud",
          "width": 42,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        243,
        290,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            77,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        243,
        580,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "width": 782,
}
`;
